--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
              <div>
                  <ul class="skills">
-                     <li><b>HTML5 / CSS3 / Javascript / Java </b></li>
+                     <li><b>HTML5 / CSS3 / Javascript/ PHP / MySQL / Java </b></li>
                      <li><b>MS Office (Word , Excel, Powerpoint ...) / Windows</b></li>
                  </ul>
              </div>
