--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="row">
 
          <div class="three columns">
-            <img class="profile-pic"  src="images/me.jpg" alt="" />
+            <img class="profile-pic"  src="images/mee.jpg" alt="" />
          </div>
 
          <div class="nine columns main-col">
@@ -201,7 +201,7 @@
 
              <div>
                  <ul class="skills">
-                     <li><b>HTML5 / CSS3 / Javascript/ PHP / MySQL / Java </b></li>
+                     <li><b>HTML5 / CSS3 / Javascript/ PHP / MySQL / Java / SHELL-KOMMANDO (Linux) </b></li>
                      <li><b>MS Office (Word , Excel, Powerpoint ...) / Windows</b></li>
                  </ul>
              </div>
@@ -284,7 +284,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
-                        <img alt="" src="images/portfolio/portfolio.png">
+                        <img alt="" src="images/portfolio/Rätselraten1.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Portfolio Website</h5>
@@ -311,11 +311,11 @@
 		      <div class="description-box">
 			      <h4>Cascade</h4>
 			      <p>Dies ist eine einfache Webseite, die mit HTML und CSS erstellt wurde, um meine Designfähigkeiten zu entwickeln</p>
-               <span class="categories"><i class="fa fa-tag"></i>HTML/CSS Webdesign</span>
+               <span class="categories"><i class="fa fa-tag"></i> HTML/CSS Webdesign  </span>
 		      </div>
 
             <div class="link-box">
-               <a href="#" target="_blank">Details</a>
+               <a href="https://noreme.github.io/Cascade-Website-with-HTML5-and-CSS/">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -323,16 +323,16 @@
 
          <div id="modal-02" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/todo-app.png" alt="" />
+            <img class="scale-with-grid" src="images/portfolio/todo-app.png" alt="" /> 
 
 		      <div class="description-box">
-			      <h4>To-do App</h4>
-			      <p>Dies ist eine einfache to-do List app, die mit HTML CSS und Javascript erstellt wurde, um meine Javascriptfähigkeiten zu entwickeln</p>
-               <span class="categories"><i class="fa fa-tag"></i>Frontend , Javascript , App , Web Development</span>
+			      <h4>Chew-in-note App</h4>
+			      <p>Dies ist eine einfache Chew-in-note app, die mit HTML CSS und Javascript erstellt wurde, um meine Javascriptfähigkeiten zu entwickeln</p>
+               <span class="categories"><i class="fa fa-tag"></i> Frontend , Javascript , App , Web Development </span>
 		      </div>
 
             <div class="link-box">
-               <a href="#" target="_blank">Details</a>
+               <a href="https://noreme.github.io/Chew-in-note/">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -340,16 +340,16 @@
 
          <div id="modal-03" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/calculator.png" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/calculator.png" alt="" /> 
 
 		      <div class="description-box">
-			      <h4>Judah</h4>
+			      <h4>Calculator</h4>
                   <p>Dies ist eine einfache Calculator app, die mit HTML CSS und Javascript erstellt wurde, um meine Javascriptfähigkeiten zu entwickeln</p>
                   <span class="categories"><i class="fa fa-tag"></i>Frontend , Javascript , App , Web Development</span>
 		      </div>
 
             <div class="link-box">
-               <a href="#" target="_blank">Details</a>
+               <a href="https://noreme.github.io/Calculator/">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -357,16 +357,17 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/portfolio.png" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/Rätselraten.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Portfolio</h4>
-                  <p>Dies ist eine einfache Portfolio Webseite, die mit HTML und CSS erstellt wurde, um meine Designfähigkeiten zu entwickeln</p>
-                  <span class="categories"><i class="fa fa-tag"></i>HTML/CSS Webdesign</span>
+			      <h4>Rätselraten</h4>
+                  <p>Dies ist eine einfache Rätselraten app, die mit HTML, CSS, JAVASCRIPT und SQL (SQLite-storage)
+                     auf der Cordova-Plattform, erstellt wurde, um meine Designfähigkeiten zu entwickeln</p>
+                  <span class="categories"><i class="fa fa-tag"></i>APACHE-CORDOVA-APP(HTML/CSS/javascript/SQL)</span>
 		      </div>
 
             <div class="link-box">
-               <a href="#" target="_blank">Details</a>
+               <a href="https://noreme.github.io//">download der app hier</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -420,7 +421,7 @@
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2021 Noreme</li>
+               <li>&copy; Copyright 2023 Noreme</li>
                <li>Design by Noreme</li>
             </ul>
 
