--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
          <div id="modal-02" class="popup-modal mfp-hide">
 
-            <img class="scale-with-grid" src="images/portfolio/todo-app.png" alt="" /> 
+            <img class="scale-with-grid" src="images/portfolio/todo-app.png" alt="" style="max-height:800px;display: block;margin: 0 auto;" /> 
 
 		      <div class="description-box">
 			      <h4>Chew-in-note App</h4>
@@ -340,7 +340,7 @@
 
          <div id="modal-03" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/calculator.png" alt="" /> 
+		      <img class="scale-with-grid" src="images/portfolio/calculator.png" alt="" style="max-height:1100px;display: block;margin: 0 auto;" /> 
 
 		      <div class="description-box">
 			      <h4>Calculator</h4>
@@ -357,17 +357,17 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/Rätselraten.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/Rätselraten.jpg" alt="" style="max-height:600px;display: block;margin: 0 auto;" />
 
 		      <div class="description-box">
 			      <h4>Rätselraten</h4>
-                  <p>Dies ist eine einfache Rätselraten app, die mit HTML, CSS, JAVASCRIPT und SQL (SQLite-storage)
+                  <p>Dies ist eine einfache Rätselraten apk, die mit HTML, CSS, JAVASCRIPT und SQL (SQLite-storage)
                      auf der Cordova-Plattform, erstellt wurde, um meine Designfähigkeiten zu entwickeln</p>
                   <span class="categories"><i class="fa fa-tag"></i>APACHE-CORDOVA-APP(HTML/CSS/javascript/SQL)</span>
 		      </div>
 
             <div class="link-box">
-               <a href="https://noreme.github.io//">download der app hier</a>
+               <a href="App/MyAndroidSpielsApp.apk">download der Apk hier</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
