--- a/index.html
+++ b/index.html
@@ -77,112 +77,139 @@
    ================================================== -->
    <section id="about">
 
-      <div class="row">
+   <div class="row">
 
-         <div class="three columns">
-            <img class="profile-pic"  src="images/mee.jpg" alt="" />
-         </div>
-
-         <div class="nine columns main-col">
-
-            <h2>Über mich</h2>
-
-            <p>
-                Ich studiere gerade Informatik an der Technische Hochschule Bingen und programmiere leidenschaftlich
-                gern. Ich habe gute Kenntnisse in Deutsch und Englisch. Französisch ist meine Muttersprache.
-                Kommunikation, Soziabilität und Teamfähig sind meine stärken.
-                Ich kann gut mit Stress umgehen un bin kritikfähig.
-                Ich bin bereit neues zu lernen und bin zuverlässig mit der Arbeit.
-            </p>
-
-            <div class="row">
-               <div class="columns contact-details">
-                  <h2>Grundinformationen</h2>
-                  <p class="address">
-                      <span>Name : Daris Noreme Tchombeguin</span><br>
-                      <span>Tel: +49 (0) 176 58053760</span><br>
-                     <span>Email:darisnoreme1@gmail.com </span>
-                  </p>
-               </div>
-
-               <div class="columns download">
-                  <p>
-                     <a href="CV.pdf" class="button"><i class="fa fa-download"></i>Lebenslauf</a>
-                  </p>
-               </div>
-            </div> <!-- end row -->
-         </div> <!-- end .main-col -->
+      <div class="three columns">
+         <img class="profile-pic" src="images/mee.jpg" alt="Profilbild" />
       </div>
-   </section> <!-- About Section End-->
+
+      <div class="nine columns main-col">
+
+         <h2>Über mich</h2>
+
+         <p>
+            Ich studiere derzeit Angewandte Informatik an der Hochschule Fulda und interessiere mich besonders für digitale Organisation und logistische Prozesse.  
+            Ich spreche fließend Deutsch und Englisch; Französisch ist meine Muttersprache.  
+            Zu meinen Stärken zählen Zuverlässigkeit, Teamfähigkeit, Kommunikationsfähigkeit sowie ein ruhiger Umgang mit stressigen Situationen.  
+            Ich bin lernbereit, verantwortungsvoll und arbeite strukturiert und gewissenhaft.
+         </p>
+
+         <div class="row">
+            <div class="columns contact-details">
+               <h2>Grundinformationen</h2>
+               <p class="address">
+                  <span>Name: Daris Noreme Tchombeguin</span><br>
+                  <span>Tel: +49 (0)176 58053760</span><br>
+                  <span>Email: darisnoreme1@gmail.com</span>
+               </p>
+            </div>
+
+            <div class="columns download">
+               <p>
+                  <a href="CV.pdf" class="button"><i class="fa fa-download"></i>Lebenslauf</a>
+               </p>
+            </div>
+         </div> <!-- end row -->
+
+      </div> <!-- end .main-col -->
+   </div>
+</section> <!-- About Section End -->
 
 
    <!-- Resume Section
    ================================================== -->
-   <section id="resume">
+<section id="resume">
 
-      <!-- Education
+   <!-- Education
+   ----------------------------------------------- -->
+   <div class="row education">
+
+      <div class="three columns header-col">
+         <h1><span>Bildung</span></h1>
+      </div>
+
+      <div class="nine columns main-col">
+
+         <div class="row item">
+            <div class="twelve columns">
+               <h3>Hochschule Fulda</h3>
+               <p class="info">Bachelor of Science – Angewandte Informatik <span>&bull;</span> <em class="date">Oktober 2023 – heute</em></p>
+               <ul>
+                  <li>Studium mit Fokus auf Informationssysteme, IT-Organisation und Datensicherheit</li>
+                  <li>Grundkenntnisse in IT-Sicherheit (Systemverwaltung, Netzwerkschutz, Verschlüsselung)</li>
+                  <li>Verständnis für die digitale Strukturierung und Optimierung von Arbeitsprozessen</li>
+                  <li>Theorie-Praxis-Verbindung in Datenverarbeitung und Systemgestaltung</li>
+               </ul>
+            </div>
+         </div> <!-- item end -->
+
+         <div class="row item">
+            <div class="twelve columns">
+               <h3>OpenClassroom, Udemy, W3Schools ...</h3>
+               <p class="info">ständige Weiterbildung im digitalen Bereich <span>&bull;</span> <em class="date">April 2021 – heute</em></p>
+               <p>
+                  Ich bilde mich regelmäßig online weiter – insbesondere in Themen wie MS Office, digitale Organisation, Datenverarbeitung und Grundlagen moderner Lagerverwaltungssysteme.
+                  Diese Kenntnisse helfen mir, strukturiert und effizient zu arbeiten. Ich bin stets motiviert, Neues zu lernen und anzuwenden – auch im Bereich der Lagerlogistik und Betriebsorganisation.
+               </p>
+            </div>
+         </div> <!-- item end -->
+
+         <div class="row item">
+            <div class="twelve columns">
+               <h3>Technische Hochschule Köln</h3>
+               <p class="info">Sprachkurse <span>&bull;</span> <em class="date">September 2020 – November 2020</em></p>
+               <p>Abschluss mit DSH-2.</p>
+            </div>
+         </div> <!-- item end -->
+
+      </div> <!-- main-col end -->
+   </div> <!-- End Education -->
+
       ----------------------------------------------- -->
-      <div class="row education">
+<div class="row work">
 
-         <div class="three columns header-col">
-            <h1><span>Bildung</span></h1>
-         </div>
+   <div class="three columns header-col">
+      <h1><span>Erfahrung</span></h1>
+   </div>
 
-         <div class="nine columns main-col">
+   <div class="nine columns main-col">
 
-            <div class="row item">
-               <div class="twelve columns">
-                  <h3>TECHNISCHE HOCHSCHULE Bingen</h3>
-                  <p class="info">Bachelor of Science – Informatik<span>&bull;</span> <em class="date">April 2021 - Heute</em></p>
-                   Ich studiere gerade <b>Informatik</b> an der TECHNISCHE HOCHSCHULE Bingen.
-               </div>
-            </div> <!-- item end -->
+       <div class="row item">
+           <div class="twelve columns">
+               <h3>ALDI SÜD – Zentrallager</h3>
+               <p class="info">Lagermitarbeiter / Kommissionierer <span>&bull;</span> <em class="date">April 2021 – August 2023</em></p>
+               <ul>
+                   <li>Kommissionierung, Warenein- und -ausgang</li>
+                   <li>Lagerpflege und Verpackungstätigkeiten</li>
+                   <li>Arbeiten nach Sicherheits- und Hygienestandards</li>
+               </ul>
+           </div>
+       </div> <!-- item end -->
 
-             <div class="row item">
-                 <div class="twelve columns">
-                     <h3>Openclassroom , Udemy , ... </h3>
-                     <p class="info">ständige Weiterbildung<span>&bull;</span> <em class="date">April 2020 - Heute</em></p>
-                     <p>Aufgrund meiner Leidenschaft für Informatik und neue Technologien versuche ich, mir
-                         verschiedene Fähigkeiten anzueignen, um meine persönlichen Projekte zu verwirklichen.
-                         In diesem Zusammenhang lerne ich die Webentwicklung und möchte viele Großprojekte in
-                         Unternehmen realisieren.
-                     </p>
-                 </div>
-             </div> <!-- item end -->
-         </div> <!-- main-col end -->
-      </div> <!-- End Education -->
+       <div class="row item">
+           <div class="twelve columns">
+               <h3>Abega-Computer</h3>
+               <p class="info">IT-Betreuer <span>&bull;</span> <em class="date">Jan 2019 – März 2019</em></p>
+               <ul>
+                   <li>Technische Unterstützung und Kundenberatung</li>
+                   <li>Installation von Software und Systempflege</li>
+               </ul>
+           </div>
+       </div> <!-- item end -->
 
-      <!-- Work
-      ----------------------------------------------- -->
-      <div class="row work">
+       <div class="row item">
+           <div class="twelve columns">
+               <h3>Kreativ Informatik</h3>
+               <p class="info">IT Support / Wartung (Praktikum) <span>&bull;</span> <em class="date">Aug 2018 – Dez 2018</em></p>
+               <ul>
+                   <li>Wartung von Computern und Fehleranalyse</li>
+                   <li>Einfache Netzwerkkonfiguration und Geräteinstallation</li>
+               </ul>
+           </div>
+       </div> <!-- item end -->
 
-         <div class="three columns header-col">
-            <h1><span>Erfahrung</span></h1>
-         </div>
-
-         <div class="nine columns main-col">
-             <div class="row item">
-                 <div class="twelve columns">
-                     <h3>Kreativ Informatik</h3>
-                     <p class="info">IT Support / Wartung<span>&bull;</span> <em class="date">Aug 2018  - Dez 2018</em></p>
-                     <ul>
-                         <li>-> Ich habe ein Pratikum bei Lernzentrum Kreativ Informatik im Computer-Wartung und Netzwerk Bereich</li>
-                     </ul>
-                 </div>
-             </div> <!-- item end -->
-
-             <div class="row item">
-                 <div class="twelve columns">
-                     <h3>Abega-Computer</h3>
-                     <p class="info">IT Betreuer<span>&bull;</span> <em class="date">Jan 2019 - März 2019</em></p>
-                     <ul>
-                         <li>-> Ich Arbeitete als IT-Betreuer bei Abega-Computer</li>
-                     </ul>
-                 </div>
-             </div> <!-- item end -->
-
-         </div> <!-- main-col end -->
-      </div> <!-- End Work -->
+   </div> <!-- main-col end -->
+</div> <!-- End Work -->
 
 
       <!-- Skills
@@ -201,13 +228,14 @@
 
              <div>
                  <ul class="skills">
-                     <li><b>HTML5 / CSS3 / Javascript/ PHP / MySQL / Java / SHELL-KOMMANDO (Linux) </b></li>
-                     <li><b>MS Office (Word , Excel, Powerpoint ...) / Windows</b></li>
+                     <li><b>MS Office (Word, Excel, PowerPoint, Outlook) / Windows-Betriebssysteme</b></li>
+                     <li><b>Erfahrung mit moderner Lagertechnik und digitaler Bestandsführung</b></li>
+                     <li><b>Grundkenntnisse in Lagerverwaltungssystemen (SAP, Microsoft Dynamics 365)</b></li>
                  </ul>
              </div>
 
-             <p>Ich mag auch gerne lesen, Musik hören. Ich habe eine besondere Interesse für <b>KI und Netzwerken</b>
-                 entwickelt</p>
+             <p>Ich arbeite strukturiert, zuverlässig und teamorientiert. Ich interessiere mich besonders 
+               für <b>digitale Arbeitsprozesse</b> und deren praktische Anwendung im Logistikbereich.</p>
 
 			</div> <!-- main-col end -->
 
@@ -421,7 +449,7 @@
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2023 Noreme</li>
+               <li>&copy; Copyright 2025 Noreme</li>
                <li>Design by Noreme</li>
             </ul>
 
