--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">Hallo! Ich bin Daris Noreme.</h1>
-            <h3 style="color: white">Ich bin Student der Informatik an der Technische Hochschule Bingen. Ich begeistere mich für neue Technologien und Programmierung.
+            <h3 style="color: white">Ich bin Student der Angewandte Informatik an der Hochschule Fulda. Ich begeistere mich für neue Technologien und Programmierung.
                 Beginnen Sie zu scrollen und erfahren Sie mehr <a class="smoothscroll" href="#about">über mich</a>.
             </h3>
             <hr/>
