--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">Hallo! Ich bin Daris Noreme.</h1>
-            <h3 style="color: white">Ich bin Student der Angewandte Informatik an der Hochschule Fulda. Ich begeistere mich für neue Technologien und Programmierung.
-                Beginnen Sie zu scrollen und erfahren Sie mehr <a class="smoothscroll" href="#about">über mich</a>.
-            </h3>
+   <h3 style="color: white">
+   Ich bin Student der Angewandten Informatik an der Hochschule Fulda und begeistere mich für neue Technologien und Programmierung.  
+   Scrollen Sie nach unten und erfahren Sie mehr <a class="smoothscroll" href="#about">über mich</a>.
+</h3>
+
             <hr/>
             <ul class="social">
                 <li><a href="https://github.com/noreme" target="_blank"><i class="fa fa-github"></i></a></li>
